# nn_simple

./: CMakeLists.txt  README.txt
include/: log_macros.h  loss.h  nn.h  optimization.h  tools.h  types.h
src/: nn.cpp  optimization.cpp  tools.cpp
test/: test_nn.cpp
